--- a/src/frontend_swift/OneBank/OneBank/View/Base.lproj/Main.storyboard
+++ b/src/frontend_swift/OneBank/OneBank/View/Base.lproj/Main.storyboard
@@ -21,14 +21,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="splashScreenBackground" translatesAutoresizingMaskIntoConstraints="NO" id="Eyl-d9-E0f">
-                                <rect key="frame" x="-4" y="-13" width="424.00000000000006" height="922"/>
+                                <rect key="frame" x="-4" y="-13" width="424" height="922"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="423.99999999999994" id="BRK-L8-6sS"/>
                                     <constraint firstAttribute="height" constant="922" id="I3y-tT-Mpy"/>
                                 </constraints>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="splashScreenG" translatesAutoresizingMaskIntoConstraints="NO" id="Isd-pe-PdJ">
-                                <rect key="frame" x="-25" y="-13" width="467.00000000000006" height="922"/>
+                                <rect key="frame" x="-25" y="-13" width="467" height="922"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="922" id="2oC-aS-FLP"/>
                                     <constraint firstAttribute="width" constant="466.99999999999994" id="IJE-pg-b7n"/>
